@@ -1,6 +1,7 @@
 == 2.8.2 ==
 Release date: 
 * Enhancement: Removed .elementor-widget-container class as part of the “Optimized Markup” experiment
+* Enhancement: Enhanced security of widgets with saved templates feature
 
 == 2.8.1 ==
 Release date: November 27, 2024
